remove submodule because github publish will fail.

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,7 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+docs/CNAME
+docs/cn/drafts/
+pelican-plugins/
+pelican-themes/
